--- a/package.json
+++ b/package.json
@@ -39,19 +39,20 @@
     "touch"
   ],
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-jshint": "~0.6.2",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-mochaccino": "~0.1.7",
-    "grunt-banner": "~0.2.0",
-    "grunt-closure-compiler": "~0.0.21",
-    "chai": "~1.7.2",
     "blanket": "~1.1.5",
+    "chai": "~1.7.2",
+    "express": "~3.3.7",
+    "grunt": "~0.4.1",
+    "grunt-banner": "~0.2.0",
     "grunt-cli": "~0.1.9",
-    "sinon": "~1.7.3",
-    "express": "~3.3.7"
+    "grunt-closure-compiler": "~0.0.21",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-cssmin": "~0.4.1",
+    "grunt-contrib-jshint": "~0.6.2",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-force-task": "^2.0.0",
+    "grunt-mochaccino": "~0.1.7",
+    "sinon": "~1.7.3"
   }
 }
