Fix build with google closure compiler + grunt
* use google closure compiler npm packet
* use a patched version for `grunt-closure-compiler` which
  is able to use the java closure compiler in node_modules
* `grunt rebuild` works again

--- a/package.json
+++ b/package.json
@@ -42,10 +42,11 @@
     "blanket": "~1.1.5",
     "chai": "~1.7.2",
     "express": "~3.3.7",
+    "google-closure-compiler": "^20200517.0.0",
     "grunt": "~0.4.1",
     "grunt-banner": "~0.2.0",
     "grunt-cli": "~0.1.9",
-    "grunt-closure-compiler": "~0.0.21",
+    "grunt-closure-compiler": "github:11com7/grunt-closure-compiler",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-cssmin": "~0.4.1",
