--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "touch"
   ],
   "devDependencies": {
-    "blanket": "~1.1.5",
-    "chai": "~1.7.2",
-    "express": "~3.3.7",
+    "blanket": "~1.2.3",
+    "body-parser": "^1.19.0",
+    "chai": "~4.2.0",
+    "express": "~4.17.1",
     "google-closure-compiler": "^20200517.0.0",
     "grunt": "~0.4.1",
     "grunt-banner": "~0.2.0",
@@ -57,6 +58,6 @@
     "jsdom": "16.2.2",
     "jsdom-global": "3.0.2",
     "mocha": "^7.2.0",
-    "sinon": "~1.7.3"
+    "sinon": "~9.0.2"
   }
 }
